<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/update_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/update_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:text="@string/update_title"
            android:textColor="#000000"
            android:layout_marginBottom="26dp"
            android:textSize="16sp" />

      <TextView
          android:id="@+id/content_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:lineSpacingExtra="6dp"
          android:text="1.修复已知问题\n2.修复bug,优化用户体验"
          android:textColor="#000000"
          android:textSize="16sp" />


    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.66dp"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/user_protocol_left_selector"
            android:padding="10dp"
            android:text="@string/update_l_bt"
            android:textColor="#333333"
            android:textSize="17sp" />

        <View
            android:layout_width="0.66dp"
            android:layout_height="52dp"
            android:background="#dddddd" />

        <Button
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/user_protocol_right_selector"
            android:padding="10dp"
            android:text="@string/update_r_bt"
            android:textColor="#333333"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>