<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/navigation_color">

            <ImageView
                android:id="@+id/nav_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/back_bt"
                android:src="@mipmap/back_arrow3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/nav_back"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/my_setting"
                android:text="@string/my_setting"
                android:textColor="@color/white"
                android:textSize="19.2sp" />

            <TextView
                android:id="@+id/profile_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:text="保存"
                android:textColor="#3793ff"
                android:textSize="15.4sp"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9.6dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/notification_push_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_notify_push"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />

            <CheckBox
                android:id="@+id/push_msg_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12.5dp"
                android:button="@drawable/settings_notification_selector" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <RelativeLayout
            android:id="@+id/clear_cache_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_cache"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />

            <ImageView
                android:id="@+id/right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />

            <TextView
                android:id="@+id/cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@id/right_arrow"
                android:letterSpacing="0.01"
                android:text="100kb"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <RelativeLayout
            android:id="@+id/version_update_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_update"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <RelativeLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_terms_of_use"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />
            <!-- @string/control_terms_of_use  -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_about"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />
            <!-- @string/control_terms_of_use  -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <RelativeLayout
            android:id="@+id/about_us_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/control_about"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <RelativeLayout
            android:id="@+id/accessibility_statement"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/white"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:letterSpacing="0.01"
                android:text="@string/accessibility_statement"
                android:textColor="#262b2e"
                android:textSize="15.4sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <TextView
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/mesetting_item_bg"
            android:gravity="center"
            android:text="@string/app_logout"
            android:textColor="#262b2e"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>
